--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -18,7 +18,7 @@
 		</div>
 		{{#each providerCategories}}
 			<div class="col-lg-3">
-				<ul class="nav nav-pills nav-stacked tabs">
+				<ul class="nav nav-stacked tabs">
 					<li role="presentation" class="active"><a href="/provider/{{key}}">{{name}}</a></li>
 				</ul>
 			</div>
