--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4945,24 +4945,48 @@ button.close {
 .tabs {
   margin-right: 20px;
   margin-top: 15px;
-  width: 250px;
-  height: 50px;
+  width: 280px;
+  height: 70px;
   padding-top: 10px;
-  font-size: 18px; }
+  font-size: 20px;
+  margin-left: 20px;
+  border-bottom-width: 0px; }
   .tabs li {
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    border: 1px solid #e5e5e5;
+    background-color: #ededed; }
 
 .treatment {
   margin-left: 15px; }
+  .treatment .border {
+    border-right: 2px solid #e5e5e5; }
   .treatment img {
-    width: 800px;
-    height: 350px;
+    width: 750px;
+    height: 380px;
     margin-left: -28px;
     margin-top: 15px; }
 
+p {
+  margin-top: 40px;
+  margin-bottom: 40px; }
+
+#providers, #doctors, #procedures {
+  margin-left: -32px;
+  padding-top: 20px;
+  margin-top: 15px;
+  border-top: 2px solid #e5e5e5; }
+
+#bio {
+  font-size: 16px;
+  margin-top: 45px;
+  border-bottom: 2px solid #e5e5e5;
+  padding-bottom: 40px;
+  margin-left: -40px; }
+
 .treatment-box {
   margin-left: -45px;
-  margin-top: 20px; }
+  margin-top: 20px;
+  margin-bottom: 40px; }
   .treatment-box h3 {
     font-size: 16px;
     background-color: #e5e5e5;
@@ -4972,14 +4996,17 @@ button.close {
     padding-left: 10px; }
   .treatment-box img {
     height: 180px;
-    width: 280px; }
+    width: 250px; }
+  .treatment-box button {
+    margin-top: 80px; }
 
 .treat {
   margin-top: 45px;
   border-bottom: 2px solid #e5e5e5;
   padding-bottom: 40px;
   margin-left: -45px;
-  width: 843px; }
+  width: 843px;
+  border-bottom-width: 0px; }
   .treat img {
     width: 120px;
     height: 120px;
@@ -4991,6 +5018,10 @@ button.close {
   .treatment-doc h3 {
     padding-left: 8px;
     margin-left: -10px; }
+
+.bttn {
+  color: #00cc9d;
+  height: 30px; }
 
 .doc {
   margin-top: 45px;
@@ -5008,12 +5039,52 @@ button.close {
   margin-top: 45px;
   margin-left: -45px;
   border-bottom: 2px solid #e5e5e5;
-  width: 843px; }
+  width: 843px;
+  border-bottom-width: 0px; }
   .proc button {
     background-color: #e5e5e5;
     width: 150px;
     height: 50px;
     margin-bottom: 20px; }
+
+.name h3 {
+  background-color: #e5e5e5;
+  font-size: 18px;
+  width: 400px;
+  height: 50px;
+  padding-top: 15px;
+  padding-left: 10px;
+  margin-left: -15px; }
+
+.form {
+  background-color: #e5e5e5;
+  width: 400px;
+  height: 600px;
+  margin-left: -15px; }
+  .form .nm {
+    padding-top: 30px; }
+  .form .form-control {
+    width: 350px;
+    height: 45px;
+    margin-left: 20px; }
+  .form .textarea {
+    width: 350px;
+    margin-left: 20px; }
+  .form .dropdown {
+    margin-left: 20px; }
+  .form .button {
+    margin-left: 20px;
+    width: 170px;
+    height: 40px;
+    background-color: #df5f69;
+    color: white;
+    font-size: 20px; }
+
+.button {
+  background-color: #df5f69;
+  color: white;
+  font-size: 14px;
+  height: 30px; }
 
 .post_img {
   height: auto;
