--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -47,27 +47,57 @@
 .tabs{
 	margin-right: 20px;
 	margin-top: 15px;
-	width:250px;
-	height:50px;
+	width:280px;
+	height:70px;
 	padding-top:10px;
-	font-size:18px;
+	font-size:20px;
+  margin-left: 20px;
+border-bottom-width:0px;
+
   li{
     margin-bottom: 20px;
-
-  }
+    border:1px solid #e5e5e5;
+    background-color: rgb(237,237,237);
+    
 }
+
+}
+
 .treatment{
 	margin-left: 15px;
+  .border{
+    border-right:2px solid #e5e5e5;
+  }
 	img{
-		width: 800px;
-		height: 350px;
+		width: 750px;
+		height: 380px;
 		margin-left: -28px;
 		margin-top: 15px;
 	}
 }
+
+  p{
+    margin-top:40px;
+   margin-bottom: 40px;
+  }
+
+#providers,#doctors,#procedures{
+  margin-left:-32px;
+  padding-top:20px;
+  margin-top:15px;
+  border-top:2px solid #e5e5e5;
+}
+#bio{
+  font-size: 16px;
+  margin-top: 45px;
+  border-bottom: 2px solid #e5e5e5;
+  padding-bottom: 40px;
+  margin-left: -40px;
+}
 .treatment-box{
 margin-left: -45px;
 margin-top: 20px;
+margin-bottom:40px;
 
 h3{
 	font-size:16px;
@@ -79,16 +109,21 @@ h3{
 	}
 	img{
 		height: 180px;
-		width: 280px;
+		width: 250px;
 	}
-
+  button{
+    margin-top:80px;
+    // background-color: #FA5858;
+  }
 }
+
 .treat{
 	margin-top: 45px;
 	border-bottom:2px solid #e5e5e5;
 	 padding-bottom: 40px;
 	  margin-left:-45px;
 		width:843px;
+    border-bottom-width: 0px;
 	img{
 		width:120px;
 		height:120px;
@@ -102,6 +137,11 @@ h3{
 		padding-left: 8px;
 		margin-left: -10px;
 	}
+}
+.bttn{
+  color:#00cc9d;
+ height:30px;
+  // border-color:#00cc9d;
 }
 .doc{
   margin-top: 45px;
@@ -121,6 +161,7 @@ h3{
 	margin-left:-45px;
 	border-bottom: 2px solid #e5e5e5;
 	width:843px;
+  border-bottom-width: 0px;
 	button{
 		background-color:#e5e5e5;
 		width:150px;
@@ -129,12 +170,57 @@ h3{
 
 	}
 }
+.name{
+  h3{
+  background-color:#e5e5e5;
+  font-size:18px;
+  width: 400px;
+  height:50px;
+  padding-top:15px;
+  padding-left:10px;
+  margin-left: -15px;
+}
+}
+.form{
+  background-color:#e5e5e5;
+  width:400px;height:600px;
+  margin-left:-15px;
+  .nm{
+    padding-top:30px;
+  }
+
+  .form-control{
+    width: 350px;
+    height:45px;
+    margin-left:20px;
+  }
+  .textarea{
+    width: 350px;
+    margin-left:20px;
+  }
+  .dropdown{
+    margin-left: 20px;
+    }
+  .button{
+    margin-left:20px;
+    width:170px;
+    height:40px;
+    background-color:rgb(223,95,105);
+    color:white;
+    font-size: 20px;
+  }
+}
+.button{
+  background-color:rgb(223,95,105);
+  color:white;
+  font-size:14px;
+  height:30px;
+}
 .post_img{
   height:auto;
   width:50%;
   margin:0 auto;
 }
-
 
 .edit-input {
     display:none;
