--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,16 +1,16 @@
 <div class="container">
 	<div class="row treatment">
-		<div class="col-lg-9" style="border-right:2px solid #e5e5e5;">
+		<div class="col-lg-8 border">
 			<div class="row doc" style="height:350px">
-				<div class="col-lg-4 ">
+				<div class="col-lg-4">
 					<img src="images/logo.png" style="margin-left:50px">
 				</div>
 				<div class="col-lg-4">
-					{{#each doctors}}
-						<h3>{{name}}</h3>
-						<p style="font-size: 18px;">{{description}}</p>
+					<!-- {{#each doctors}} -->
+						<h3>{{doctor.name}}</h3>
+						<p style="font-size: 18px;">{{doctor.description}}</p>
 						<p style="font-size: 18px;">{{data}}</p>
-					{{/each}}
+					<!-- {{/each}} -->
 				</div>
 				<div class="col-lg-4">
 					<button class="btn btn-default" style="margin-top: 60px; margin-left: 30px;" type="button">Verified</button>
@@ -25,7 +25,7 @@
 					</ul>
 				</div>
 				<h4 id="bio"></h4>
-				<p style="font-size: 16px; margin-top: 45px; border-bottom: 2px solid #e5e5e5; padding-bottom: 40px; margin-left: -40px;">
+				<p>
 					{{{provider.description}}}
 				</p>
 				<h4 id="education" style="margin-left: -32px;">Education</h4>
@@ -44,20 +44,21 @@
 				<button type="submit" class="btn btn-default" style="margin-left:-30px; ">Write a review</button>
 			</div>
 		</div>
-		<div class="col-lg-3">
+		<div class="col-lg-4">
 			<!--{{#each treatments}}
 				<h3 style="background-color:#e5e5e5;font-size:18px;width: 320px;height:40px; margin-left: -10px;padding-top:12px;text-align:left;padding-left:10px">{{name}}</h3>
 			{{/each}}-->
-			<br>
+
+			<div class="form">
 			<form>
-				<div class="form-group">
-					<input type="name" class="form-control" id="name" placeholder="Name:" style="width: 300px; height: 45px;">
+				<div class="form-group nm">
+					<input type="name" class="form-control" id="name" placeholder="Name:" >
 				</div>
 				<div class="form-group">
-					<input type="email" class="form-control" id="email" placeholder="Email:" style="width: 300px; height: 45px;">
+					<input type="email" class="form-control" id="email" placeholder="Email:">
 				</div>
 				<div class="form-group">
-					<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)" style="width: 300px; height: 45px;">
+					<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
 				</div>
 				<div class="form-group">
 					<div class="dropdown">
@@ -75,7 +76,7 @@
 				</div>
 				<br>
 				<div class="form-group">
-					<textarea class="form-control" rows="5" placeholder="Questions/Comments" style="width: 300px;"></textarea>
+					<textarea class="textarea" rows="5" placeholder="Questions/Comments"></textarea>
 				</div>
 			</form>
 			<!-- <p><span class="glyphicon glyphicon-phone"></span>0832 271 4370</p>
@@ -90,6 +91,9 @@
 			<br>
 			<br>
 			<br>
-			<button type="button" class="btn btn-default" style="margin-left:15px;width:170px;height:40px;margin-left: 0px">Enquire</button>
+			<button type="button" class="button">Enquire</button>
 		</div>
+	</div>
+
+
 	</div>
