--- a/Gmt/templates/views/user.hbs
+++ b/Gmt/templates/views/user.hbs
@@ -2,8 +2,8 @@
 
 
 	  <div class="row treatment">
-		<div class="col-lg-9" style="border-right:2px solid #e5e5e5">
-		<img src="images/hosp3.png">
+		<div class="col-lg-8 border">
+		<img src="images/hosp3.png" >
     <div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
     <div id="navbar-example">
 			<ul class="nav nav-pills nav-justified pills" role="tablist" >
@@ -14,29 +14,28 @@
 		</div>
 
     <h4 id="about"></h4>
-		<p style="font-size: 16px; margin-top: 45px; border-bottom: 2px solid #e5e5e5; padding-bottom: 40px; margin-left: -40px;">
-	 {{{provider.description}}}</p>
+		<p>{{{provider.description}}}</p>
 
-    <h4 id="doctors" style="margin-left:-32px">Doctors</h4>
+    <h4 id="doctors">Doctors</h4>
      {{#each doctors}}
 		<div class="row treat">
-		<div class="col-lg-3 ">
-		<img class="circle" src="images/logo.png">
+		<div class="col-lg-2 ">
+		<img src="images/logo.png">
 		</div>
 
-    <div class="col-lg-6  treatment-doc">
+    <div class="col-lg-5  treatment-doc">
     <h3>{{name}}</h3>
 		<p>{{description}}</p>
 		<p>{{data}}</p>
     </div>
 
-    <div class="col-lg-3">
-		<button type="button" class="btn btn-default">Verified</button>
+    <div class="col-lg-2">
+		<button type="button" class="bttn ">Verified</button>
 		</div>
 	  </div>
     {{/each}}
 
-		<h4 id="procedures" style="margin-left:-32px">Procedures</h4>
+		<h4 id="procedures">Procedures</h4>
 		<div class="row proc">
 		{{#each doctor_pro}}
 		<div class="col-lg-4">
@@ -47,19 +46,20 @@
 		</div>
 		</div>
 
-		<div class="col-lg-3">
-		<h3 style="background-color:#e5e5e5;font-size:18px;width: 320px;height:40px; margin-left: -10px;padding-top:12px;text-align:left;padding-left:10px">{{providers.name}}</h3>
-		<br><br>
+		<div class="col-lg-4 name">
+		<h3>{{providers.name}}</h3>
+		 <br><br>
 
+      <div class="form">
 			<form>
-			<div class="form-group">
-			<input type="name" class="form-control" id="name" placeholder="Name:" style="width: 300px; height: 45px;">
+      <div class="form-group nm" >
+			<input type="name" class="form-control" id="name" placeholder="Name:">
 			</div>
 			<div class="form-group">
-			<input type="email" class="form-control" id="email" placeholder="Email:" style="width: 300px; height: 45px;">
+			<input type="email" class="form-control" id="email" placeholder="Email:">
 			</div>
 			<div class="form-group">
-			<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)" style="width: 300px; height: 45px;">
+			<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)" >
 			</div>
 			<div class="form-group">
 			  <div class="dropdown">
@@ -78,13 +78,15 @@
 				<!-- <input type="treatment" class="form-control" id="treatment" placeholder="Treatment" style="width: 300px; height: 45px;">
 				</div> -->
 			<div class="form-group">
-			<textarea class="form-control" rows="5" placeholder="Questions/Comments" style="width: 300px;"></textarea>
+			<textarea class="textarea" rows="5" placeholder="Questions/Comments"></textarea>
 		  </div>
+
 			</form>
 
 			<br>
 			<br>
 			<br>
-			<button type="button" class="btn btn-default" style="margin-left:15px;width:170px;height:40px;margin-left: 0px">Enquire</button>
+			<button type="button" class="button" style="">Enquire</button>
 			</div>
+				</div>
 		</div>
