--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -67,28 +67,74 @@
 <div class="tab-pane" id="docs">
 <button type="upload" class="btn btn-default">UPLOAD</button>
 <br><br>
-<div class="example">
-{{#each pro}}
-<table class="table table-bordered">
-<thead>
-    <tr>
-    <th>Sr.no</th>
-    <th> Name</th>
-    <th>Date</th>
-    <th>Actions</th>
-    </tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>{{name}}</td>
-<td>{{date}}</td>
-<td><span class="glyphicon glyphicon-download-alt"></span>&nbsp;&nbsp;<span class="glyphicon glyphicon-remove"></span></td>
-</tr>
-{{/each}}
-</tbody>
-</table>
-</div>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+ <div class="panel panel-default">
+  <div class="panel-heading" role="tab" id="headingOne">
+  <h4 class="panel-title">
+  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <div class="row">
+          <div class="col-lg-6">
+       <span class="glyphicon glyphicon-folder-close" aria-hidden="true"></span> Orthopedics
+          </div>
+          <div class="col-lg-6">
+            <a href="#"><span class="glyphicon glyphicon-download" style="padding-left: 10px; padding-right: 10px;"></span>
+           <a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-share" style="padding-left: 10px; padding-right: 10px;"></span></a>
+          <a href="#">  <span class="glyphicon glyphicon-trash " style="padding-left: 10px; padding-right: 10px;"></span></a>
+
+          </div>
+        </div>
+
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+              </div>
+              <div class="modal-body">
+              <form class="form-inline">
+              <input type="text" class="form-control" id="search" placeholder="" style="width:500px">
+
+              <button style="height: 35px; width: 40px;"><span class="glyphicon glyphicon-search"></span></button></form>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+
+</a>
+
+     </h4>
+   </div>
+   <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+     <div class="panel-body">
+       <div class="row">
+           <div class="col-lg-6">
+        <span class="glyphicon glyphicon-file" aria-hidden="true"></span> file1
+           </div>
+           <div class="col-lg-6">
+             <span class="glyphicon glyphicon-download" style="padding-left: 10px; padding-right: 10px;"></span>
+             <span class="glyphicon glyphicon-share" style="padding-left: 10px; padding-right: 10px;"></span>
+             <span class=" glyphicon glyphicon-trash " style="padding-left: 10px; padding-right: 10px;"></span>
+           </div>
+         </div>
+         <div class="row">
+             <div class="col-lg-6">
+          <span class="glyphicon glyphicon-file" aria-hidden="true"></span> file2
+             </div>
+             <div class="col-lg-6">
+               <span class="glyphicon glyphicon-download" style="padding-left: 10px; padding-right: 10px;"></span>
+               <span class="glyphicon glyphicon-share" style="padding-left: 10px; padding-right: 10px;"></span>
+               <span class=" glyphicon glyphicon-trash " style="padding-left: 10px; padding-right: 10px;"></span>
+             </div>
+           </div>
+     </div>
+   </div>
+ </div>
+ </div>
+
+
 </div>
 
 <div class="tab-pane" id="not">
@@ -120,6 +166,7 @@
       </div>
     </div>
   </div>
+
   <br>
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
