--- a/Gmt/templates/views/treatment.hbs
+++ b/Gmt/templates/views/treatment.hbs
@@ -2,7 +2,7 @@
 	<div class="row treatment">
 		<div class="col-lg-8 border">
 
-				<img class="image" src="{{cloudinaryUrl treatmentCategory.image}}">
+				<img class="image" src="{{cloudinaryUrl treatmentCategory.imageOuter}}">
 
        <div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
         <div id="navbar-example">
