--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -20,6 +20,9 @@
 		<div class="container">
 			<div role="navigation" class="navbar navbar-inverse">
 				<div class="container-fluid">
+
+					<div class="row">
+						<div class="col-lg-4">
 					<div class="navbar-header">
 						<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
 							<span class="sr-only">Toggle navigation</span>
@@ -31,6 +34,20 @@
 							<img alt="Goa Medical Travel" src="/images/logo.png" />
 						</a>
 					</div>
+				</div>
+				<div class="col-lg-8">
+					<div class="row">
+						<div class="collapse navbar-collapse">
+							<ul class="nav navbar-nav navbar-right">
+								{{# each navs}}
+								<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}}>
+									<a href="{{ href }}">{{ label }}</a>
+								</li>
+								{{/each}}
+							</ul>
+						</div>
+					</div>
+					<div class="row">
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							{{# each navLinks}}
@@ -40,7 +57,10 @@
 							{{/each}}
 						</ul>
 					</div>
+				</div>
 
+				</div>
+</div>
 				</div>
 			</div>
 		</div>
@@ -71,7 +91,20 @@
 			{{/if}}
 		</div>
 		{{/if}}
-		<!-- The content block should contain the body of your template's content-->
+		<!-- The content block should contain the bod
+    <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+    <button type="submit" class="btn btn-default">Sign in</button>
+    <a href="/signup/">Signup</a>
+      </div>
+    </div>
+  </form>
+    </div>
+  </div>
+
+
+
+</div>y of your template's content-->
 		{{{body}}}
 	</div>
 	<div class="container">
