--- a/Gmt/templates/views/signup.hbs
+++ b/Gmt/templates/views/signup.hbs
@@ -1,19 +1,23 @@
 <div class="container">
- <div class="square">
-   <strong style="margin-left:20px;font-size:18px;">Sign Up</strong>
-  <form class="form-inline">
-  <div class="form-group">
-  <input type="text" class="form-control" id="fname" placeholder="First Name">
-  </div>
-  <div class="form-group">
-  <input type="text" class="form-control" id="lname" placeholder="Surname">
-  </div>
-</form><br>
-<form>
-<input type="email" class="form-control" id="email" placeholder="Email"><br>
-<input type="password" class="form-control" id="password" placeholder="Password"><br>
-<input type="password" class="form-control" id="pass" placeholder="Re-enter password"><br>
-<button type="submit" class="btn btn-default">Sign up</button>
-</form>
-</div>
+	<div class="square">
+
+		<strong style="margin-left:20px;font-size:18px;">Sign Up</strong>
+		<form class="form-inline" method="post">
+			<input type="hidden" name="action" value="signup">
+			<div class="form-group">
+				<input type="text" name="name.full" class="form-control" id="first" placeholder="Enter Full Name">
+			</div>
+			<br>
+			<input name="email" type="email" class="form-control" id="email" placeholder="Email">
+			<br>
+			<input name="password" type="password" class="form-control" id="password" placeholder="Password">
+			<br>
+			<input name="password_confirm" type="password" class="form-control" id="pass" placeholder="Re-enter Password">
+			<br>
+			<button type="submit" class="btn btn-default">Sign up</button>
+		</form>
+		{{#if signedUpSuccessfully}}
+			<h3>Signed up successfully</h3>
+		{{/if}}
+	</div>
 </div>
