--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -1,30 +1,28 @@
 <div class="container">
-  <!-- <div class="box"> -->
-  <div class="row box">
-    <div class="col-sm-6">
-      <img src="images/logo-email.gif" style="margin-top: 100px; margin-left: 50px;margin-bottom:100px;">
-    </div>
-    <div class="col-sm-6 col">
-      <form class="form-horizontal">
-      <div class="form-group">
-      <label for="email" class="col-sm-2 control-label">Email</label>
-      <input type="email" class="form-control" id="Email">
-      </div>
-    <div class="form-group">
-      <label for="password" class="col-sm-2 control-label">Password</label>
-      <input type="password" class="form-control" id="Password">
-
-    </div>
-
-    <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-    <button type="submit" class="btn btn-default">Sign in</button>
-    <a href="/signup/" style="margin-left:50px;">Signup</a>
-      </div>
-    </div>
-  </form>
-    </div>
-  </div>
+	<!-- <div class="box"> -->
+	<div class="row box">
+		<div class="col-sm-6">
+			<img src="images/logo-email.gif" style="margin-top: 100px; margin-left: 50px;margin-bottom:100px;">
+		</div>
+		<div class="col-sm-6 col">
+			<form class="form-horizontal">
+				<div class="form-group">
+					<label for="email" class="col-sm-2 control-label">Email</label>
+					<input type="email" class="form-control" id="Email">
+				</div>
+				<div class="form-group">
+					<label for="password" class="col-sm-2 control-label">Password</label>
+					<input type="password" class="form-control" id="Password">
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-default">Sign in</button>
+						<a href="/signup/" class="btn btn-default" style="margin-left:50px;">Signup</a>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
 
 
 
