--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -5,14 +5,15 @@
 			<img src="images/logo-email.gif" style="margin-top: 100px; margin-left: 50px;margin-bottom:100px;">
 		</div>
 		<div class="col-sm-6 col">
-			<form class="form-horizontal">
+			<form class="form-horizontal" method="post">
+				<input type="hidden" name="action" value="login">
 				<div class="form-group">
 					<label for="email" class="col-sm-2 control-label">Email</label>
-					<input type="email" class="form-control" id="Email">
+					<input type="email" name="email" class="form-control" id="Email">
 				</div>
 				<div class="form-group">
 					<label for="password" class="col-sm-2 control-label">Password</label>
-					<input type="password" class="form-control" id="Password">
+					<input type="password" name="password" class="form-control" id="Password">
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
@@ -23,7 +24,4 @@
 			</form>
 		</div>
 	</div>
-
-
-
 </div>
