--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -39,7 +39,7 @@
           <!-- Hamari file -->
         <div class="col-sm-6 col">
 					<form method="post" enctype="multipart/form-data">
-						<input type="hidden" name="action" value="u">
+						<input type="hidden" name="action" value="upload">
 						<p>
 						<b> Please specify a file, or a set of files: </b>
 							<br>
@@ -48,6 +48,12 @@
 						<div>
 							<input name="submit" type="submit" value="Send">
 						</div>
+					</form>
+        </div>
+				<div class="col-sm-6 col">
+					<form method="post" enctype="multipart/form-data">
+						<input type="hidden" name="action" value="download">
+							<input name="submit" type="submit" value="Download">
 					</form>
         </div>
 					<!-- <input type="button" value="Edit" id="Edit" style="width: 70px;"/> -->
