--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -21,6 +21,7 @@
 				width: 120px;
 				height:120px;
 			}
+
 .provider-box {
 				border: 1px solid black;
 				width: 830px;
@@ -46,23 +47,46 @@
 
 .tabs{
 	margin-right: 20px;
-	margin-top: 15px;
-	width:280px;
-	// height:20px;
-	padding-top:10px;
+	margin-top: -30px;
+  padding-top:10px;
 	font-size:20px;
   margin-left: -15px;
-border-bottom-width:0px;
+  border-bottom-width:0px;
+li{
+    margin-bottom: 20px;
+    // border:1px solid #e5e5e5;
+    background-color: rgb(237,237,237);
+    height:60px;
+    margin-top:0px;
+    width:365px;
+    padding-top:5px;
+    box-shadow: 0px 5px 0px rgb(205,201,201);
+
+    }
+    a{
+      outline:none;
+    }
+
+}
+.tab{
+	margin-right: 20px;
+	margin-top: -20px;
+	 width:275px;
+	// height:20px;
+	// padding-top:-60px;
+	font-size:20px;
+  margin-left: -15px;
+ border-bottom-width:0px;
 
   li{
     margin-bottom: 20px;
     border:1px solid #e5e5e5;
     background-color: rgb(237,237,237);
     height:60px;
+    margin-top: 10px;
 
 
 }
-
 }
 
 .treatment{
@@ -71,10 +95,10 @@ border-bottom-width:0px;
     border-right:2px solid #e5e5e5;
   }
 	img{
-		width: 750px;
-		height: 380px;
-		margin-left: -28px;
-		margin-top: 15px;
+		width: 770px;
+		height: 400px;
+		margin-left: -25px;
+		margin-top: -20px;
 	}
 }
 
@@ -84,10 +108,11 @@ border-bottom-width:0px;
   }
 
 #providers,#doctors,#procedures{
-  margin-left:-32px;
+  margin-left:-45px;
   padding-top:20px;
   margin-top:15px;
   border-top:2px solid #e5e5e5;
+  width:770px;
 }
 #bio{
   font-size: 16px;
@@ -97,7 +122,7 @@ border-bottom-width:0px;
   margin-left: -40px;
 }
 .treatment-box{
-margin-left: -45px;
+margin-left: -35px;
 margin-top: 20px;
 margin-bottom:40px;
 
@@ -112,10 +137,14 @@ h3{
 	img{
 		height: 180px;
 		width: 250px;
+    margin-top: 20px;
+
 	}
   button{
-    margin-top:80px;
-    // background-color: #FA5858;
+    margin-top:95px;
+    background-color: rgb(255,108,111);
+    color:white;
+    box-shadow: 0px 1px 0px rgb(223,95,105);
   }
 }
 
@@ -134,16 +163,18 @@ h3{
 }
 }
 .treatment-doc{
-	margin-top: -20px;
-	h3{
+	margin-top: -30px;
+	p{
 		padding-left: 8px;
-		margin-left: -10px;
+		margin-left: -90px;
 	}
 }
-.bttn{
-  color:#00cc9d;
- height:30px;
-  // border-color:#00cc9d;
+#text{
+  width:75px;
+  border-color:rgb(137,216,196);
+  margin-top: 20px;
+ margin-left: -50px;
+  color:rgb(137,216,196);
 }
 .doc{
   margin-top: 45px;
@@ -156,6 +187,9 @@ h3{
 		height:180px;
 		border-radius:50%;
 		margin-top: -10px;
+  }
+  #text{
+    margin-top: 40px;
   }
 }
 .proc{
@@ -176,44 +210,49 @@ h3{
   h3{
   background-color:#e5e5e5;
   font-size:18px;
-  width: 400px;
+  width: 365px;
   height:50px;
   padding-top:15px;
   padding-left:10px;
   margin-left: -15px;
+  margin-top:-20px;
 }
 }
 .form{
   background-color:#e5e5e5;
-  width:400px;height:600px;
+  width:365px;
+  height:600px;
   margin-left:-15px;
   .nm{
     padding-top:30px;
   }
 
   .form-control{
-    width: 350px;
+    width: 300px;
     height:45px;
     margin-left:20px;
   }
   .textarea{
-    width: 350px;
+    width: 300px;
     margin-left:20px;
   }
   .dropdown{
     margin-left: 20px;
+    width:100px;
     }
   .button{
     margin-left:20px;
-    width:170px;
+    width:150px;
     height:40px;
     background-color:rgb(255,108,111);
     color:white;
-    font-size: 20px;
+    font-size: 20px;border-radius: 6px;
+    
+
   }
 }
 .button{
-  background-color:rgb(255,108,111);
+  // background-color:rgb(223,95,105);
   color:white;
   font-size:14px;
   height:30px;
@@ -274,7 +313,6 @@ button{
   button{
     background-color:rgb(41,132,209);
     color:white;
-    margin-left:20px;
-    margin-bottom:20px;
+    margin-left: 20px;
   }
 }
