--- a/Gmt/templates/views/treatment.hbs
+++ b/Gmt/templates/views/treatment.hbs
@@ -1,23 +1,30 @@
 <div class="container">
 	<div class="row treatment">
 		<div class="col-lg-8 border">
-
-				<img class="image" src="{{cloudinaryUrl treatmentCategory.imageOuter}}">
-
-       <div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
-        <div id="navbar-example">
+     <img  src="http://placehold.it/450x150">
+     <div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
+        <!-- <div id="navbar-example">
 					<ul class="nav nav-pills nav-justified pills" role="tablist">
 						{{#each treatment_nav}}
 							<li class="active"><a href="#about">{{name}}</a></li>
 						{{/each}}
 					</ul>
-				</div>
+				</div> -->
+				<div id="navbar-example">
+    <ul class="nav nav-tabs" style="border:none;margin-top:-5px; background-color: rgb(237, 237, 237); width: 768px; height: 70px; margin-left: -45px;padding-left:100px;padding-top:15px;" role="tablist">
+      <li class="active" ><a href="#overview">Overview</a></li>
+			<li><a href="#providers">Featured Providers</a></li>
+      <li><a href="#doctors" style="background-color:rgb(237,237,237);border:none;color:black;">Specialists</a></li>
+    </ul>
+  </div>
 
 
-				<h4 id="about"></h4>
+				<h4 id="overview"></h4>
+				{{#each treatmentCategory}}
 				<p>
-				{{{treatmentCategory.description}}}
+				{{{discription}}}
 				</p>
+				{{/each}}
 
 				<h4 id="providers">Featured Providers</h4>
 				{{#each providers}}
@@ -26,8 +33,8 @@
 							<img src="{{cloudinaryUrl image}}">
 						</div>
 						<div class="col-lg-6">
-							<h3 style="">{{name}}</h3>
-							<button type="button" class="button">Know More</button>
+							<h3>{{name}}</h3>
+							<button type="button" class="bttn" onclick=location.href="/user/">Know More</button>
 						</div>
 					</div>
 				{{/each}}
@@ -36,17 +43,18 @@
 				{{#each doctors}}
 					<div class="row treat">
 						<div class="col-lg-3">
-							<img src="images/logo.png">
+							<img src="http://placehold.it/120x120">
 						</div>
 
 						<div class="col-lg-5 treatment-doc">
-							<p>{{name}} </p>
+							<p><a href="/doctor/{{key}}">{{name}}</a></p>
 							<p>{{description}}</p>
 							<p>{{data}}</p>
 						</div>
 
 						<div class="col-lg-2">
-							<button type="button" class="bttn">Verified</button>
+							<input type="text" class="form-control" id="text" value="Verified">
+
 						</div>
 					</div>
 				{{/each}}
@@ -77,7 +85,7 @@
 		<div class="col-lg-4">
 			<ul class="nav nav-stacked tabs">
 				{{#each treatmentCategories}}
-					<li role="presentation" class="active"><a href="/treatment/{{key}}">{{name}}</a></li>
+	      <li role="presentation" class="active"><a href="/treatment/{{key}}">{{name}}</a></li>
 				{{/each}}
 			</ul>
 		</div>
